--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {
-    "ws": "^8.16.0"
-  }
+  "name": "internal-monorepo",
+  "private": true,
+  "author": "Fabian Kachlock"
 }
