--- a/clients/Zwoo.BotDashboard.Distributor/Zwoo.BotDashboard.Distributor.csproj
+++ b/clients/Zwoo.BotDashboard.Distributor/Zwoo.BotDashboard.Distributor.csproj
@@ -2,9 +2,7 @@
 
   <PropertyGroup>
     <PackageId>Zwoo.BotDashboard.Distributor</PackageId>
-    <Version>0.0.9</Version>
-    <Authors>Fabian Kachlock</Authors>
-
+    <Version>1.0.0</Version>
 
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Zwoo.BotDashboard.Distributor</RootNamespace>
@@ -13,6 +11,19 @@
     <LangVersion>12</LangVersion>
     <IsAotCompatible>true</IsAotCompatible>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <Authors>Fabian Kachlock</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>A zwoo bot dashboard zrp message distribution actor.</Description>
+    <Copyright>Fabian Kachlock 2024</Copyright>
+    <PackageProjectUrl>
+      https://github.com/zwoo-hq/bots-dashboard/tree/main/clients/Zwoo.BotDashboard.Distributor</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/zwoo-hq/bots-dashboard.git</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="./README.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
 
 </Project>
