feat: update package.json

--- a/clients/dashboard-client/package.json
+++ b/clients/dashboard-client/package.json
@@ -1,11 +1,24 @@
 {
   "name": "@zwoo/dashboard-client",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
+  "description": "A Javascript/Typescript ZRPe dashboard client",
   "author": "Fabian Kachlock",
   "files": [
     "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zwoo-hq/bots-dashboard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zwoo-hq/bots-dashboard/issues"
+  },
+  "homepage": "https://github.com/zwoo-hq/bots-dashboard/blob/main/clients/dashboard-client/README.md",
+  "keywords": [
+    "zwoo",
+    "zrpe",
+    "zrp",
+    "zwoo-bot"
   ],
   "module": "dist/dashboard-client.mjs",
   "types": "dist/main.d.ts",
@@ -15,5 +28,6 @@
     "typescript": "^5.4.4",
     "vite": "^5.2.8",
     "vite-plugin-dts": "^3.8.1"
-  }
+  },
+  "packageManager": "^pnpm@8.15.6"
 }
