--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,10 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@zwoo/dashboard-client": "workspace:*"
+    "@mdi/font": "^7.4.47",
+    "@zwoo/dashboard-client": "workspace:*",
+    "pinia": "^2.1.7",
+    "roboto-fontface": "^0.10.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.14",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/webfontloader": "^1.6.38",
+    "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-tsc": "^2.0.11"
   }
 }
